Parallel: each annotated field gets a content store.